[gd_scene load_steps=21 format=2]

[ext_resource path="res://Prefabs/Ship/ShipRotatorV2.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Ship/Rotation.gd" type="Script" id=2]
[ext_resource path="res://Sprites/crosshair102.png" type="Texture" id=3]
[ext_resource path="res://Sprites/effect_purple2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ship_E.png" type="Texture" id=5]
[ext_resource path="res://Prefabs/Ship/RotationThrusterParticles.tres" type="Material" id=6]
[ext_resource path="res://Prefabs/Ship/Trail.gd" type="Script" id=7]
[ext_resource path="res://Prefabs/Ship/ThrustedShip.gd" type="Script" id=8]
[ext_resource path="res://Prefabs/Ship/Thrusters.gd" type="Script" id=9]
[ext_resource path="res://Sprites/trace_07_rotated.png" type="Texture" id=10]
[ext_resource path="res://Prefabs/Ship/SmallThrusterParticles.tres" type="Material" id=11]
[ext_resource path="res://Prefabs/Ship/Engine.gd" type="Script" id=12]
[ext_resource path="res://Tools/DebugCircle.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/PhysicsDebug.gd" type="Script" id=14]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -1.30266, 0, 0, Vector2( 0.982979, 0.231818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.00214133, 0.648822, 0.710921, 0.828694, 1 )
colors = PoolColorArray( 1.5, 1.5, 1.5, 1, 1, 1, 1, 1, 1, 1, 1, 0.619608, 1, 1, 1, 0.0403922, 1, 1, 1, 0 )

[node name="Ship" type="RigidBody2D"]
position = Vector2( 256, 256 )
angular_damp = 1.0
script = ExtResource( 8 )
thruster_power = 500.0

[node name="RotationStarboard" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Thruster1" type="Particles2D" parent="RotationStarboard"]
modulate = Color( 0.894118, 0.835294, 0.901961, 0.278431 )
position = Vector2( -27, -40.2973 )
rotation = 2.00713
emitting = false
amount = 32
lifetime = 0.2
visibility_rect = Rect2( -15, -15, 30, 30 )
process_material = ExtResource( 6 )

[node name="Thruster2" type="Particles2D" parent="RotationStarboard"]
modulate = Color( 0.894118, 0.835294, 0.901961, 0.278431 )
position = Vector2( 35, 6 )
rotation = -2.0944
emitting = false
amount = 32
lifetime = 0.2
visibility_rect = Rect2( -15, -15, 30, 30 )
process_material = ExtResource( 6 )

[node name="RotationPort" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Thruster1" type="Particles2D" parent="RotationPort"]
modulate = Color( 0.894118, 0.835294, 0.901961, 0.278431 )
position = Vector2( -27, 40 )
rotation = -2.00713
emitting = false
amount = 32
lifetime = 0.2
visibility_rect = Rect2( -15, -15, 30, 30 )
process_material = ExtResource( 6 )

[node name="Thruster2" type="Particles2D" parent="RotationPort"]
modulate = Color( 0.894118, 0.835294, 0.901961, 0.278431 )
position = Vector2( 35, -6 )
rotation = 2.0944
emitting = false
amount = 32
lifetime = 0.2
visibility_rect = Rect2( -15, -15, 30, 30 )
process_material = ExtResource( 6 )

[node name="ShipRotator" type="Node2D" parent="."]
script = ExtResource( 1 )
dead_zone = 0.05
rotation_multiplayer = 8.0
max_angular_velocity = 4.0

[node name="DebugCircle" parent="ShipRotator" instance=ExtResource( 13 )]

[node name="EngineController" type="Node2D" parent="."]
script = ExtResource( 12 )
thrust_fuel_consumption_multiplayer = 5.0

[node name="Thrusters" type="Node2D" parent="EngineController"]
script = ExtResource( 9 )

[node name="PortThruster" type="Particles2D" parent="EngineController/Thrusters"]
modulate = Color( 1.24, 0.66, 1.32, 1 )
position = Vector2( 4.4, -12 )
rotation = 1.5708
scale = Vector2( 0.75, 1 )
emitting = false
amount = 16
visibility_rect = Rect2( -15, -15, 30, 30 )
process_material = ExtResource( 11 )
texture = ExtResource( 10 )

[node name="StarboardThruster" type="Particles2D" parent="EngineController/Thrusters"]
modulate = Color( 1.24, 0.66, 1.32, 1 )
position = Vector2( 4.4, 12 )
rotation = -1.5708
scale = Vector2( 0.75, 1 )
emitting = false
visibility_rect = Rect2( -15, -15, 30, 30 )
process_material = ExtResource( 11 )
texture = ExtResource( 10 )

[node name="DecelThruster" type="Particles2D" parent="EngineController/Thrusters"]
modulate = Color( 1.24, 0.66, 1.32, 1 )
position = Vector2( 30, 0 )
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )
emitting = false
visibility_rect = Rect2( -15, -15, 30, 30 )
process_material = ExtResource( 11 )
texture = ExtResource( 10 )

[node name="MainThruster" type="Particles2D" parent="EngineController/Thrusters"]
modulate = Color( 1.24, 0.66, 1.32, 1 )
position = Vector2( -27.3723, 0 )
emitting = false
visibility_rect = Rect2( -15, -15, 30, 30 )
process_material = SubResource( 5 )
texture = ExtResource( 10 )

[node name="Trail" type="Line2D" parent="EngineController/Thrusters"]
z_index = -1
points = PoolVector2Array( 0, 0, -180, 0 )
width = 45.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 6 )
texture = ExtResource( 4 )
texture_mode = 2
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 7 )
max_points = 100
resolution = 15.0
life_time = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 46.4753, -0.387695, -32.3555, -48.9721, -47.7177, -32.2855, -35.269, -0.766479, -48.5123, 32.0769, -31.8258, 48.4985 )

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 0.785397
current = true
zoom = Vector2( 4, 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="LookCrossHair" type="Sprite" parent="."]
position = Vector2( 151.503, 0 )
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="RefuelTween" type="Tween" parent="."]

[node name="FuelRechargeTimer" type="Timer" parent="."]
one_shot = true

[node name="PhysicsDebug" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="Arrow2D" type="Node2D" parent="PhysicsDebug"]

[connection signal="timeout" from="FuelRechargeTimer" to="." method="_on_FuelRechargeTimer_timeout"]
